Timetable, Stop, Anpassungen an TrainService und Wagenplan. Wagentyp in Wagenplan verschoben. Minor refactoring.

--- a/magnolia-module-geologix/src/main/resources/geologix/apps/zugservices.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/apps/zugservices.yaml
@@ -404,7 +404,7 @@ subApps:
               - name: name
                 label: Name
                 class: info.magnolia.ui.form.field.definition.TextFieldDefinition
-              - name: start
+              - name: departure
                 label: Abfahrtszeit
                 fieldType: date
                 time: true
