--- a/magnolia-module-geologix/src/main/resources/geologix/apps/wagenplaene.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/apps/wagenplaene.yaml
@@ -410,6 +410,17 @@ subApps:
                   class: info.magnolia.dam.app.assets.field.translator.AssetCompositeIdKeyTranslator
                 contentPreviewDefinition:
                   contentPreviewClass: info.magnolia.dam.app.ui.field.DamFilePreviewComponent
+              - name: wagentyp
+                label: Wagentyp
+                class: info.magnolia.ui.form.field.definition.MultiValueFieldDefinition
+                field:
+                  name: linkField
+                  class: info.magnolia.ui.form.field.definition.LinkFieldDefinition
+                  targetWorkspace: category
+                  targetTreeRootPath: /wagentypen
+                  appName: wagentypen
+                  identifierToPathConverter:
+                    class: info.magnolia.ui.form.field.converter.BaseIdentifierToPathConverter
               - name: sitze
                 label: Sitze
                 class: info.magnolia.ui.form.field.definition.MultiValueFieldDefinition
