--- a/magnolia-module-geologix/src/main/resources/geologix/apps/zugservices.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/apps/zugservices.yaml
@@ -406,8 +406,12 @@ subApps:
                 class: info.magnolia.ui.form.field.definition.TextFieldDefinition
               - name: departure
                 label: Abfahrtszeit
-                fieldType: date
-                time: true
+                fieldType: text
+                validators:
+                  - name: time
+                    class: info.magnolia.ui.form.validator.definition.RegexpValidatorDefinition
+                    pattern: ([01]\d|2[0-3]):[0-5]\d
+                    errorMessage: Please enter a time with format hh:mm (08:34, 00:12, 19:45)
               - name: strecke
                 label: Strecke
                 description: Strecke wählen
