--- a/magnolia-module-geologix/pom.xml
+++ b/magnolia-module-geologix/pom.xml
@@ -48,12 +48,6 @@
             <scope>compile</scope>
         </dependency>
 
-        <!-- TEST -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>info.magnolia.rest</groupId>
             <artifactId>magnolia-rest-services</artifactId>
@@ -65,6 +59,18 @@
         <dependency>
             <groupId>info.magnolia.dam</groupId>
             <artifactId>magnolia-dam-templating</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
+<!--            <artifactId>jackson-datatype-jsr310</artifactId>-->
+<!--        </dependency>-->
+
+
+        <!-- TEST -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
