--- a/VueJs_Practice/package.json
+++ b/VueJs_Practice/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {},
   "devDependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "vue": "^2.6.10"
   }
 }
