--- a/magnolia-module-geologix/src/main/resources/geologix/apps/zugservices.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/apps/zugservices.yaml
@@ -421,7 +421,7 @@ subApps:
                   - name: time
                     class: info.magnolia.ui.form.validator.definition.RegexpValidatorDefinition
                     pattern: ([01]\d|2[0-3]):[0-5]\d
-                    errorMessage: Please enter a time with format hh:mm (08:34, 00:12, 19:45)
+                    errorMessage: Format Error! Please enter a time with format hh:mm (08:34, 00:12, 19:45)
               - name: strecke
                 label: Strecke
                 description: Strecke wählen
