--- a/magnolia-module-geologix/src/main/resources/geologix/apps/reservationen.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/apps/reservationen.yaml
@@ -142,6 +142,10 @@ subApps:
         label: Delete
         icon: icon-delete
         class: info.magnolia.ui.framework.action.ConfirmationActionDefinition
+        confirmationHeader: Do you really want to delete the selected item?
+        confirmationMessage: Deleting the selected item cannot be undone. Do you want to proceed?
+        proceedLabel: Delete
+        cancelLabel: Cancel
         availability:
           multiple: true
           writePermissionRequired: true
@@ -457,9 +461,19 @@ subApps:
               - name: wagenNumber
                 label: Wagen
                 class: info.magnolia.ui.form.field.definition.TextFieldDefinition
+                validators:
+                  - name: number
+                    class: info.magnolia.ui.form.validator.definition.RegexpValidatorDefinition
+                    pattern: \d+
+                    errorMessage: Format Error! Please enter a number only!
               - name: sitzNumber
                 label: Sitz
                 class: info.magnolia.ui.form.field.definition.TextFieldDefinition
+                validators:
+                  - name: number
+                    class: info.magnolia.ui.form.validator.definition.RegexpValidatorDefinition
+                    pattern: \d+
+                    errorMessage: Format Error! Please enter a number only!
               - name: fromID
                 label: Von
                 class: info.magnolia.ui.form.field.definition.LinkFieldDefinition
