--- a/geologix-webapp/pom.xml
+++ b/geologix-webapp/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>camera-collection</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
 
     </dependencies>
 
