--- a/magnolia-module-geologix/pom.xml
+++ b/magnolia-module-geologix/pom.xml
@@ -60,10 +60,10 @@
             <groupId>info.magnolia.dam</groupId>
             <artifactId>magnolia-dam-templating</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
-<!--            <artifactId>jackson-datatype-jsr310</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
 
 
         <!-- TEST -->
