--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,11 @@
                 <scope>compile</scope>
             </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>com.fasterxml.jackson.datatype</groupId>-->
-<!--                <artifactId>jackson-datatype-jsr310</artifactId>-->
-<!--                <version>2.9.9</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>2.9.9</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
